# waste-scope

./: README.md  pyproject.toml  requirements.txt
