[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waste-scope"
version = "0.1.0"
description = "Mini Oprototype: detect food, estimate leftovers, and provide chef-friendly chat guidance."
authors = [
  { name="Tanya Chen", email="tanya_chen@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  # Core ML
  "torch==2.2.2",
  "torchvision==0.17.2",
  "timm==1.0.8",

  # Data / Utils
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scikit-learn==1.5.0",
  "pillow==10.3.0",

  # Computer Vision
  "opencv-python==4.10.0.84",
  "albumentations==1.4.10",

  # GenAI / RAG
  "langchain==0.2.12",
  "faiss-cpu==1.8.0",
  "sentence-transformers==2.7.0",

  # API + App
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "streamlit==1.36.0",
  "pydantic==2.8.2",

  # Infra / Ops
  "boto3==1.34.145",
  "sqlalchemy==2.0.32",
  "duckdb==1.1.0",
]

[project.optional-dependencies]
dev = [
  "black==24.8.0",
  "flake8==7.1.1",
  "pytest==8.3.2",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
